BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Sample_Lot_vod__c.object
<CustomObject>
    <description>Sample Lot contains a list of user specific Samples and Lot #s available for Sample Transactions.  Sample Lots are auto-created for Users based on Transfer Sample Transactions from one user to another user as well as from the Create Sample Lots button on Lot Catalog.</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active checkbox determines if the Sample Lot is available for selection for Sample Transactions and Sample Inventory Line Items.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocated_Quantity_vod__c</fullName>
        <description>This field has rolled up value of sample order transactions for this lot.</description>
        <label>Allocated Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_Code_ID_BMS_SHARED__c</fullName>
        <formula>Owner:User.BMS_Code_ID_BMS_SHARED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMS Code ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Territory_ID_BMS_SHARED__c</fullName>
        <formula>Owner:User.BMS_Territory_ID_BMS_SHARED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMS Territory ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Quantity_vod__c</fullName>
        <description>Calculated Quantity is the sum of all Inventory Impacts from the Sample Transaction object for this specific Sample Lot.  The Calculated Quantity should be the quantity of Samples on hand for a User at any given moment for the Sample Lot.</description>
        <label>Calculated Quantity</label>
        <summarizedField>Sample_Transaction_vod__c.Inventory_Impact_Quantity_vod__c</summarizedField>
        <summaryForeignKey>Sample_Transaction_vod__c.Lot_vod__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>District_ID_BMS_SHARED__c</fullName>
        <formula>LEFT(Territory_ID_BMS_SHARED__c, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_vod__c</fullName>
        <description>Expiration Date is the Expiration Date for the Sample Lot.  The Expiration Date field is populated from Expiration Date on Lot Catalog as part of the Transfer Sample Transaction process or Create Sample Lot Button on Lot Catalog.</description>
        <label>Final Date to disburse</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS_SHARED__c</fullName>
        <description>VPRO Dec 2013: external ID field used to migrate data</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product for which the sample lot applies;Lookup to Product Catalog</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Sample Lot</relationshipLabel>
        <relationshipName>Sample_Lot_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Force_ID_BMS_SHARED__c</fullName>
        <formula>Owner:User.BMS_Territory_ID_BMS_SHARED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Force ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Force_Name_BMS_SHARED__c</fullName>
        <formula>Owner:User.Sales_Force_ID_BMS_SHARED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Force Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Lot_BMS_SHARED__c</fullName>
        <formula>Sample_vod__c &amp;&quot;: (Lot #&quot;&amp; Name&amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Lot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Lot_Id_vod__c</fullName>
        <description>Sample Lot Id is an external Id used to allow upsert functionality for managing Sample Lots.  The Sample Lot Id can be utilized to support data loading of Sample Lots for users.</description>
        <externalId>true</externalId>
        <label>Sample Lot Id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sample_vod__c</fullName>
        <description>Sample is the Sample name for the Sample Lot record.  The Sample field is populated from the Sample picklist on Lot Catalog as part of the Transfer Sample Transaction process or Create Sample Lot Button on Lot Catalog.  If loading through data loader, verify that the Sample text loaded matches the Sample as defined in the Product Catalog.</description>
        <label>Sample</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppress_Lot_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to include BRC, Alternative Samples, High Value Promotional, Promotional, Reprint, or Custom product types in Sample Management functionality without the use of Lot Numbers.</description>
        <label>Suppress Lot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_Business_Code_BMS_SHARED__c</fullName>
        <formula>Owner:User.Territory_Business_Code_BMS_SHARED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Business Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Function_Code_BMS_SHARED__c</fullName>
        <formula>Owner:User.Territory_Function_Code_BMS_SHARED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Function Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_ID_BMS_SHARED__c</fullName>
        <formula>RIGHT( Territory_Intelligent_ID_BMS_SHARED__c , 8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Intelligent_ID_BMS_SHARED__c</fullName>
        <formula>Owner:User.Territory_Intelligent_ID_BMS_SHARED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Intelligent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Region_Code_BMS_SHARED__c</fullName>
        <formula>Owner:User.Territory_Region_Code_BMS_SHARED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Area_Code_BMS_SHARED__c</fullName>
        <formula>Owner:User.Territory_Sales_Area_Code_BMS_SHARED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Sales Area Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Type_BMS_SHARED__c</fullName>
        <formula>Owner:User.Territory_Type_BMS_SHARED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_M_vod__c</fullName>
        <description>U/M is the Unit of Measurement for the Sample Lot record. The U/M field is populated from the U/M picklist on Lot Catalog as part of the Transfer Sample Transaction process or Create Sample Lot Button on Lot Catalog.</description>
        <label>U/M</label>
        <picklist>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syringe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sample Lot</label>
    <listViews>
        <fullName>All_d_2</fullName>
        <columns>NAME</columns>
        <columns>Sample_vod__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Active_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sample_Lot_User</fullName>
        <columns>NAME</columns>
        <columns>Sample_vod__c</columns>
        <columns>Expiration_Date_vod__c</columns>
        <columns>U_M_vod__c</columns>
        <columns>Active_vod__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Calculated_Quantity_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sample Lot - User</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Lot #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Lots</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Non_Sample_Lot_Name_vod</fullName>
        <active>true</active>
        <description>Ensures that a value of No_Lot_vod is input into the Lot # feld when creating a Sample Lot record for a non-Sample product that has no associated Lot #s.</description>
        <errorConditionFormula>AND(Suppress_Lot_vod__c = true, Name != &apos;No_Lot_vod&apos;)</errorConditionFormula>
        <errorMessage>Lot # field must contain the value &apos;No_Lot_vod for a non-Sample product with no Lot #</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Sample_Required_Fields_vod</fullName>
        <active>true</active>
        <description>Ensures that a value is selected for the Product Name when creating a Lot Catalog record for a non-Sample product that has no associated Lot #s. This field is required to determine both the Product and Product type the record is being created for.</description>
        <errorConditionFormula>AND(Suppress_Lot_vod__c = true, Product_vod__c == null)</errorConditionFormula>
        <errorMessage>Product Name field is required to create a Sample Lot record for non-Sample product with no Lot#.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Non_Sample_Suppress_Lot_vod</fullName>
        <active>true</active>
        <description>Ensures that Suppress Lot is checked when a value of &apos;No_Lot_vod&apos; is input into the Lot # field when creating a Sample Lot record for a non-Sample product.</description>
        <errorConditionFormula>And(Name  = &apos;No_Lot_vod&apos;,  Suppress_Lot_vod__c  = false)</errorConditionFormula>
        <errorMessage>Suppress Lot must be checked when using the &apos;No_Lot_vod&apos; Lot # name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sample_Required_Fields_vod</fullName>
        <active>true</active>
        <description>Ensures that a value is input for either Sample or Product look up when creating a Lot Catalog record for a traditional Sample product that has associated Lot #s.</description>
        <errorConditionFormula>AND( Suppress_Lot_vod__c  = false, ISBLANK(Sample_vod__c))</errorConditionFormula>
        <errorMessage>Either Sample field or Product field is required to create a Sample Lot record for a Sample product with a Lot #</errorMessage>
    </validationRules>
</CustomObject>